// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spoiler component test Should render spoiler 1`] = `
<div>
  <div
    class="mb-1"
    style="margin-left: 1em;"
  >
    <div
      class="d-flex"
    >
      <div
        class="spoiler_arrow__right align-self-center mr-3"
      />
      <div
        class="spoiler__title"
      >
        TestSpoiler
      </div>
    </div>
  </div>
  <div
    style="display: none;"
  >
    <h1>
      Hidden text
    </h1>
  </div>
</div>
`;

exports[`Spoiler component test Should render spoiler with offset 1`] = `
<div>
  <div
    class="mb-1"
    style="margin-left: 1em;"
  >
    <div
      class="d-flex"
    >
      <div
        class="spoiler_arrow__right align-self-center mr-3"
      />
      <div
        class="spoiler__title"
      >
        Answer
      </div>
    </div>
  </div>
  <div
    style="display: none;"
  >
    <h1>
      Hidden text
    </h1>
  </div>
</div>
`;
